--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,46 @@
 plugins {
     id 'java-library'
-    id 'io.qameta.allure' version '2.8.1'
+    id 'io.qameta.allure' version '2.10.0'
 }
 
 repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.14.0",
-    selenideVersion = "5.24.0",
-    junitVersion = "5.8.1"
-
-
 allure {
-    version = allureVersion
-    autoconfigure = true
-    aspectjweaver = true
-    aspectjVersion = "1.9.6"
-    configuration = "testImplementation"
-    useJUnit5 {
-        version = allureVersion
+    report {
+        version.set("2.19.0")
     }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 dependencies {
     testImplementation(
             "org.aspectj:aspectjweaver:1.9.6",
-            "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion",
+            "com.codeborne:selenide:6.9.0",
+            "io.qameta.allure:allure-selenide:2.19.0",
             "org.aeonbits.owner:owner:1.0.12",
             "org.assertj:assertj-core:3.19.0",
             "org.slf4j:slf4j-simple:1.7.29",
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.junit.jupiter:junit-jupiter:5.9.1",
             "com.github.javafaker:javafaker:1.0.2",
             "org.aspectj:aspectjweaver:1.9.6")
     testRuntimeOnly('org.slf4j:slf4j-simple:1.7.29',
             "org.junit.jupiter:junit-jupiter-engine:5.8.2")
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-}
-
 tasks.withType(Test) {
-    systemProperties(System.getProperties())
-
     useJUnitPlatform()
 
     testLogging {
@@ -54,6 +48,12 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task smoke_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags("smoke")
     }
 }
 
