--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ dependencies {
             "org.slf4j:slf4j-simple:1.7.29",
             "org.junit.jupiter:junit-jupiter:5.9.1",
             "com.github.javafaker:javafaker:1.0.2",
-            "org.aspectj:aspectjweaver:1.9.6")
-    testRuntimeOnly('org.slf4j:slf4j-simple:1.7.29',
+            "org.aspectj:aspectjweaver:1.9.6",
+            'org.slf4j:slf4j-simple:1.7.32',
             "org.junit.jupiter:junit-jupiter-engine:5.8.2")
 }
 
